assets/css/global.css
/* import Poppins font */
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

/* import Lexend font */
@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');

*{
    font-family: "Poppins", sans-serif !important;
    color: #4800BD !important;
    font-size: 16px !important;
    font-weight: 600 !important;
}

.navbar{
    width: 100vw !important;
    max-width: fit-content !important;
}

#top-row-wrapper{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin-bottom: 4rem;
    width: auto;
}

#logo{
    position: relative;
    left: 5rem;
    top: 1.5rem;    
    height:48px;
    width:176px;
}

nav{
    position: relative;
    height: fit-content;
    width: fit-content;
    z-index: 1;
    top: 1.5rem;
    right: 5rem;
    ul{
        list-style-type: none;
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;

        li{
            margin-left: 2rem;

            a{text-decoration: none;}

            .dropdown {
                z-index: 1;
                position: relative;
                display: inline-block;

                &:hover .dropdown-content {display: block;}

                &:hover .dropbtn {background-color: #F5F5F5;}

                & .dropdown-content {
                    display: none;
                    position: absolute;
                    background-color: #f1f1f1;
                    min-width: 13.8rem;
                    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
                    z-index: 1;
                    border-radius: 20px;
                    
                    & a {
                        font-size: 14px !important;
                        padding: 12px 12px;

                        text-decoration: none;
                        display: block;
                        &:first-child{
                            border-top-left-radius: 20px;
                            border-top-right-radius: 20px;
                        }
                        &:last-child{
                            border-bottom-left-radius: 20px;
                            border-bottom-right-radius: 20px;
                        }

                        &:hover {background-color: #ddd;}
                    }
                }

                & .dropbtn {
                    border: none;
                    position: relative;
                    background-color: white;
                    padding: 0;
                    margin: 0;
                    top: 0.2rem;
                }
            }
        }
    }
}

main{
    display: flex;
    gap: 50px;
    justify-content: center;
}

aside{
    display: flex;
    flex-direction: column;
    gap: 50px;
    position: relative;
    min-width: 220px;
    #search-wrapper{
        max-width: 260px;
        position: relative;
    }

    #search-bar{
        position: relative;
        padding-left: 25px;
        border-radius: 60px;
        border: 2px solid transparent;
        /* height: 30px; */
        width: 195px;
        background-color:#F5F5F5;
        min-height: 60px;
        /* width: 220px; */
        font-weight: 300 !important;
        font-size: 14px !important;
        font-family: "Lexend", sans-serif !important;
        &:focus{
            outline: none !important;
            border: 2px solid #ddd;
        }
    }

    .search-icon-wrapper{
        position: absolute;
        z-index: 10;
        width: 100%;
        height: 100%;
        display: flex;
        justify-content: end; 
        align-items: center;
        
        #search-icon{
            margin-right: 15px;
            
            &:hover{
                height: 30px;
                width: 30px;
            }
        }
    }

    #categories-aside{
        position: relative;
        height: fit-content;
        background: #F5F5F5;
        border-radius: 20px;
        padding: 1.5rem;
        /* width: 220px; */
    }
}

